# beegweb

./: .gitignore  README.md  datagweb.py  requirements.txt  setup.cfg  test.py
src/gemweb/: __init__.py  datagweb.py
tests/: test.py
