[metadata]
# replace with your username:
name = gemweb
version = 0.1.0
author = Eloi Gabaldon
author_email = eloigabal@cimne.upc.edu
description = API to access data comming from gemweb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BeeGroup-cimne/beegweb
project_urls =
    Bug Tracker = https://github.com/BeeGroup-cimne/beegweb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: EUPL
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
